<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:rotationY="0"
    android:scaleY="1"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/registrationTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/register_margin_top"
        android:text="@string/registration"
        android:textAlignment="center"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/userNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/registrationTextView"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="@dimen/register_margin_top"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/userEmailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userNameEditText"
        android:layout_marginLeft="@dimen/default_margin_side"
        android:layout_marginTop="@dimen/register_margin_top"
        android:layout_marginRight="@dimen/default_margin_side"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userEmailEditText"
        android:layout_marginLeft="@dimen/default_margin_side"
        android:layout_marginTop="@dimen/register_margin_top"
        android:layout_marginRight="@dimen/default_margin_side"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/passwordAgainEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordEditText"
        android:layout_marginLeft="@dimen/default_margin_side"
        android:layout_marginTop="@dimen/register_margin_top"
        android:layout_marginRight="@dimen/default_margin_side"
        android:ems="10"
        android:hint="@string/password_again"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/phoneEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordAgainEditText"
        android:layout_marginLeft="@dimen/default_margin_side"
        android:layout_marginTop="@dimen/register_margin_top"
        android:layout_marginRight="@dimen/default_margin_side"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone" />

    <!-- Spinner eltávolítva -->

    <TextView
        android:id="@+id/accountTypeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/phoneEditText"
        android:layout_marginLeft="@dimen/default_margin_side"
        android:layout_marginTop="@dimen/register_margin_top"
        android:layout_marginRight="@dimen/default_margin_side"
        android:text="@string/account_type" />

    <RadioGroup
        android:id="@+id/accountTypeGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/accountTypeTextView"
        android:layout_marginLeft="@dimen/default_margin_side"
        android:layout_marginTop="@dimen/register_margin_top"
        android:layout_marginRight="@dimen/default_margin_side"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/hiker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hiker" />

        <RadioButton
            android:id="@+id/manager"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manager" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="71dp"
        android:layout_below="@id/accountTypeGroup"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="296dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="register"
            android:text="@string/registration"
            android:textColor="@color/buttonNightText"
            android:backgroundTint="@color/black"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:onClick="cancel"
            android:text="@string/cancel"
            android:textColor="@color/buttonNightText"
            android:backgroundTint="@color/black"/>/>
    </LinearLayout>
</RelativeLayout>
